hw2: 8 pts
